--- a/Pogodynka/style.css
+++ b/Pogodynka/style.css
@@ -1,13 +1,11 @@
-body {
-  background-color: rgb(9, 112, 95);
-  margin: 0;
+li{
+  list-style: none;
+  
 }
-
-h1 {
+ul{
   margin: 0;
-  text-align: center;
-  background-color: rgb(212, 212, 212);
-  -webkit-box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
-  -moz-box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
-  box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
+  padding: 0;
+}
+.city{
+  display: flex;
 }
