--- a/Slider/style.css
+++ b/Slider/style.css
@@ -27,14 +27,38 @@ h1 {
   display: none;
 }
 
+.prevSlide{
+  top: 50%;
+  left: 50%;
+  transform: translate(-150%, -50%) scale(0.5);
+  display: block;
+  opacity: 0.4;
+}
+
+.nextSlide{
+  top: 50%;
+  left: 50%;
+  transform: translate(50%, -50%) scale(0.5);
+  display: block;
+  opacity: 0.2;
+}
+
+
 .active-slide {
   display: block;
 }
 
-.slide img {
+.slide img, p, h2, video {
   width: 100%;
   height: 100%;
+  max-width: 600px;
+  max-height: 400px;
+  text-align: center;
   object-fit: cover;
+}
+.slide video{
+  width:600px;
+  height: 340px;
 }
 
 .dots {
@@ -55,7 +79,7 @@ h1 {
   transition: background-color 0.6s ease;
 }
 
-.active,
+.active-dot,
 .dot:hover {
   background-color: #0a0a0a;
 }
