--- a/Pogodynka/style.css
+++ b/Pogodynka/style.css
@@ -1,11 +1,170 @@
-li{
-  list-style: none;
-  
-}
-ul{
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-weight: normal;
 }
-.city{
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+ 
+ 
+button,
+input {
+  border: none;
+  background: none;
+  outline: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul {
+  list-style: none;
+}
+
+body {
+  font: 20px "Roboto", sans-serif;
+  background-color:#126e85ea ;
+  color: #000;
+  padding: 70px;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+
+/* SECTION top banner
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.top-banner {
+  color: #fff;
+  text-align: center;
+}
+
+.heading {
+  font-weight: bold;
+  font-size: 4rem;
+  letter-spacing: 0.02em;
+  padding: 0 0 30px 0;
+}
+
+.top-banner form {
+  position: relative;
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.top-banner form input {
+  font-size: 30px;
+  height: 40px;
+  padding: 5px 5px 10px;
+  border-bottom: 1px solid;
+}
+
+.top-banner form input::placeholder {
+  color: #fff; 
+}
+
+.top-banner form button {
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  padding: 15px 20px;
+  margin-left: 15px;
+  border-radius: 5px;
+  background-color: #946501;
+}
+
+.top-banner form button:hover {
+  background-color: #774e01;
+}
+
+.top-banner form .msg {
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  max-width: 450px;
+  min-height: 40px;
+}
+
+
+/* SECTION weather
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.weather {
+  margin: 70px 0 20px;
+}
+
+.weather .cities {
+  display: grid;
+  grid-gap: 32px 20px;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.weather .city {
+  position: relative;
+  padding: 40px 10%;
+  border-radius: 20px;
+  background: #fff;
+  color: #53627c;
+}
+
+.weather .city::after {
+  content: '';
+  width: 90%;
+  height: 50px;
+  position: absolute;
+  bottom: -12px;
+  left: 5%;
+  z-index: -1;
+  opacity: 0.3;
+  border-radius: 20px;
+  background: #fff;
+}
+
+.weather figcaption {
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.weather .city-temp,
+.weather .city-hum {
+  display: flex;
+  font-size: 72px;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #000;
+}
+
+.weather .city sup {
+  font-size: 40px;
+}
+
+.weather .city-name sup {
+  padding: 0.2em 0.6em;
+  border-radius: 30px;
+  color: #fff;
+  background: #ff8c00;
+  font-size: 16px;
+}
+
+.weather .city-icon {
+  margin-top: 10px;
+  width: 100px;
+  height: 100px;
 }
