--- a/Notekeep/style.css
+++ b/Notekeep/style.css
@@ -11,3 +11,63 @@ h1 {
   -moz-box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
   box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
 }
+input, textarea{
+  font-size: 20px;
+}
+
+label{
+  font-size: 20px;
+}
+.ShowAddNoteBtn,
+.AddNoteBtn{
+  display: block;
+  padding: 15px;
+  margin: 20px auto;
+  background-color: rgb(53, 130, 231);
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.ShowAddNoteBtn:hover,
+.AddNoteBtn:hover{
+  background-color: rgb(37, 109, 202);
+  cursor: pointer;
+}
+
+.AddNoteBtn{
+  font-size: 15px;
+  padding: 10px 25px;
+}
+
+.Notes{
+  display: none;
+  height: 250px;
+  width: 250px;
+  background-color: rgb(86, 224, 224);
+  margin: 20px auto;
+  padding: 20px;
+  position: absolute;
+  left: 42.5%;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 12px 3px 3px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px 12px 3px 3px rgba(66, 68, 90, 1);
+  box-shadow: 0px 12px 3px 3px rgba(66, 68, 90, 1);
+}
+
+#title{
+  height: 25px;
+  width: 240px;
+}
+#describe{
+  height: 75px;
+  width: 240px;
+  resize: none;
+}
+label[for=describe]
+{
+    margin-top: 50px;
+}
+
+
+
