--- a/Notekeep/style.css
+++ b/Notekeep/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(9, 112, 95);
   margin: 0;
+  text-align: center;
 }
 
 h1 {
@@ -11,37 +12,93 @@ h1 {
   -moz-box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
   box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
 }
-input, textarea{
+
+h2 {
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+input,
+textarea {
+  font-size: 20px;
+  
+}
+
+label {
   font-size: 20px;
 }
 
-label{
-  font-size: 20px;
-}
 .ShowAddNoteBtn,
-.AddNoteBtn{
-  display: block;
+.ShowEditNoteBtn,
+.AddNoteBtn,
+.EditNoteBtn {
   padding: 15px;
-  margin: 20px auto;
+  margin: 20px;
+  left: 46.5%;
   background-color: rgb(53, 130, 231);
   border: none;
   border-radius: 10px;
   font-size: 20px;
+  transition: 500ms;
+  position: absolute;
 }
 
 .ShowAddNoteBtn:hover,
-.AddNoteBtn:hover{
+.ShowEditNoteBtn:hover,
+.AddNoteBtn:hover,
+.EditNoteBtn:hover {
   background-color: rgb(37, 109, 202);
   cursor: pointer;
 }
 
-.AddNoteBtn{
+.ShowEditNoteBtn{
+  display: none;
+}
+.AddNoteBtn,
+.EditNoteBtn {
+  display:none;
   font-size: 15px;
   padding: 10px 25px;
 }
 
-.Notes{
+.EditNoteBtn{
+  background-color: #04b931;
+}
+.EditNoteBtn:hover{
+  background-color: #1d943b;
+}
+
+#editBtn,
+#deleteBtn {
+  background-color: #26863e;
+  color: rgb(0, 255, 0);
+  font-size: 16px;
+  font-weight: bolder;
+  border: none;
+  border-radius: 5px;
+}
+
+#deleteBtn {
+  background-color: #5a0000;
+  color: rgb(255, 0, 0);
+}
+
+#editBtn:hover {
+  background-color: rgba(72, 180, 22, 0.801);
+  cursor: pointer;
+}
+
+#deleteBtn:hover {
+  background-color: #850000;
+  cursor: pointer;
+}
+
+.Notes {
   display: none;
+  text-align: left;
   height: 250px;
   width: 250px;
   background-color: rgb(86, 224, 224);
@@ -49,25 +106,38 @@ label{
   padding: 20px;
   position: absolute;
   left: 42.5%;
+  top: 25px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 12px 3px 3px rgba(66, 68, 90, 1);
   -moz-box-shadow: 0px 12px 3px 3px rgba(66, 68, 90, 1);
   box-shadow: 0px 12px 3px 3px rgba(66, 68, 90, 1);
 }
 
-#title{
+#title {
   height: 25px;
   width: 240px;
 }
-#describe{
+
+#description {
   height: 75px;
   width: 240px;
   resize: none;
 }
-label[for=describe]
-{
-    margin-top: 50px;
+
+#ListOfNotes {
+  margin-top: 300px;
+  display: grid;
+  grid-gap: 32px 20px;
+  grid-template-columns: repeat(5, 1fr);
 }
 
-
-
+.NotesElement {
+  height: 225px;
+  width: 250px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: rgb(86, 224, 224);
+  list-style: none;
+  border: 2px solid black;
+}
