--- a/Canvas/style.css
+++ b/Canvas/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(9, 112, 95);
   margin: 0;
+  text-align: center;
 }
 
 h1 {
@@ -10,4 +11,10 @@ h1 {
   -webkit-box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
   -moz-box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
   box-shadow: 0px 5px 4px 1px rgba(66, 68, 90, 1);
+}
+
+canvas{
+  margin: 50px auto;
+  background-color: #fff;
+  display: block;
 }
