--- a/Pogodynka/style.css
+++ b/Pogodynka/style.css
@@ -168,3 +168,12 @@ body {
   width: 100px;
   height: 100px;
 }
+
+.weather .city button{
+  display: block;
+  height: 15px;
+  width: 80px;
+  color:#fff;
+  background-color: red;
+  margin: auto;
+}
